solve some issues
